--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"YOUR_ATERNOS_SERVER_IP",
-	"port": "YOUR_ATERNOS_SERVER_PORT",
-	"name": "BOT_NAME"
+	"ip":"velxsco_.aternos.me",
+	"port": "42447",
+	"name": "AFKBOT"
 }
